[package]
name = "hetu"
description = "Simple crate for validating and generating Finnish Personal Identity Code (HETU)"
version = "0.1.0"
authors = ["Jarno Elovirta <jarno@elovirta.com>"]
repository = "https://github.com/jelovirt/hetu"
license = "MIT"

[lib]
name = "hetu"
path = "src/lib.rs"

[dependencies]
rand = "0.3.14"
