[package]
name = "hetu"
description = "Simple crate for validating and generating Finnish Personal Identity Code/SSN (HETU)"
version = "0.3.0"
authors = ["Jarno Elovirta <jarno@elovirta.com>"]
repository = "https://github.com/jelovirt/hetu"
readme = "README.md"
keywords = ["hetu", "ssn"]
license = "MIT"

[lib]
name = "hetu"
path = "src/lib.rs"

[dependencies]
rand = "0.3.14"
